# django-personal-assistant

./: .gitignore  DS_HW1.ipynb  README.md  example.env  pyproject.toml
html_templates/: add-contact.html  add-file.html  add-note.html  file-manager.html  index.html  notes.html
personal_assistant/contacts/: admin.py  forms.py  models.py  urls.py  views.py
personal_assistant/contacts/migrations/: 0001_initial.py
personal_assistant/contacts/templates/contacts/: add-contact.html  delete-contact.html  index.html
personal_assistant/filemanager/: forms.py  models.py  serializer.py  urls.py  views.py
personal_assistant/filemanager/migrations/: 0001_initial.py  0002_remove_file_user_id_file_url_file_user_and_more.py  0003_category.py  0004_alter_file_category.py  0005_category_user_alter_file_category.py  0006_alter_category_user.py
personal_assistant/filemanager/templates/: upload.html  upload_success.html
personal_assistant/filemanager/templates/filemanager/: add_file.html  add_success.html  choose_category.html  create_category.html  delete.html  (+5 more)
personal_assistant/news/: urls.py  views.py
personal_assistant/notes_app/: admin.py  forms.py  models.py  urls.py  views.py
personal_assistant/notes_app/migrations/: 0001_initial.py  0002_alter_note_tags_alter_tag_name.py
personal_assistant/notes_app/templates/: add_note.html  base.html  delete_note.html  edit_note.html  note_detail.html  note_list.html  search_by_tag.html
personal_assistant/personal_assistant/: settings.py  urls.py
personal_assistant/users/: forms.py  models.py  urls.py  views.py
(+18 files in other folders)
